--- a/src/styles/global-style.css
+++ b/src/styles/global-style.css
@@ -1,20 +1,17 @@
 body {
   margin: 0;
   padding: 0;
-  height: 1500px;
+  background: black;
 }
 
 .header-fixed {
   background-color: #292c2f;
-  -webkit-box-shadow: 0 1px 1px #ccc;
-          box-shadow: 0 1px 1px #ccc;
+  box-shadow: 0 1px 1px #ccc;
   padding: 20px 40px;
   height: 80px;
   color: #ffffff;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   top: -100px;
-  -webkit-transition: top 0.3s;
   transition: top 0.3s;
 }
 
@@ -104,6 +101,7 @@ body.fixed .header-fixed .header-limiter nav {
     padding: 20px 0;
     height: 75px;
   }
+
   .header-fixed .header-limiter h1 {
     float: none;
     margin: -8px 0 10px;
@@ -111,18 +109,20 @@ body.fixed .header-fixed .header-limiter nav {
     font-size: 24px;
     line-height: 1;
   }
+
   .header-fixed .header-limiter nav {
     line-height: 1;
     float: none;
   }
+
   .header-fixed .header-limiter nav a {
     font-size: 13px;
   }
+
   body.fixed .header-fixed {
     display: none;
   }
 }
-
 /*
 	 We are clearing the body's margin and padding, so that the header fits properly.
 	 We are also adding a height to demonstrate the scrolling behavior. You can remove
@@ -130,27 +130,16 @@ body.fixed .header-fixed .header-limiter nav {
  */
 .home-container {
   width: 100%;
-  height: 100vh;
-  background: url("../../assects/job-bg.jpg");
+  height: 89.5vh;
   background-size: cover;
   background-repeat: no-repeat;
   opacity: 1;
   border: 1px solid tomato;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .home-main-heading {
@@ -161,62 +150,84 @@ body.fixed .header-fixed .header-limiter nav {
 
 .templates-main-container {
   height: 87vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-line-pack: center;
-      align-content: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  align-content: center;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .templates-theme-lg {
-  background: #363333;
   width: 100%;
   height: 71vh;
 }
 
 .templates-theme-temp {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  width: 100%;
+  justify-content: space-evenly;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  align-items: flex-end;
+  width: 99%;
   height: 143px;
   border: 1px solid orangered;
-  min-width: 100%;
   overflow: auto;
 }
 
 .templates-cv-img {
-  width: 28%;
+  margin: 5%;
+  width: 23%;
   margin: 5% 0 0 0;
   height: 57vh;
+  cursor: pointer;
 }
 
 .templates-cv-sm {
   width: 100px;
-  height: 130px;
+  height: 100px;
+  margin: 13px;
+  border: 1px solid orangered;
+  cursor: pointer;
 }
-/*# sourceMappingURL=global-style.css.map */
+
+.templates-theme-review {
+  position: absolute;
+  top: -3px;
+  margin: 2%;
+  border: 1px solid orange;
+  background: black;
+  height: 95vh;
+  overflow: auto;
+  width: 700px;
+}
+
+.templates-cv-img-review {
+  margin: 1%;
+  width: 600px;
+  height: 900px;
+}
+
+.cross-icon {
+  position: fixed;
+  right: 23.5%;
+  color: red;
+  text-align: end;
+  margin: 0 5px;
+  font-size: 20px;
+}
+
+.style-3::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgb(240, 233, 233);
+  background-color: #ffffff;
+}
+
+.style-3::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+  background-color: #F5F5F5;
+}
+
+.style-3::-webkit-scrollbar-thumb {
+  background-color: #ff8000;
+}/*# sourceMappingURL=global-style.css.map */
