--- a/src/styles/global-style.scss
+++ b/src/styles/global-style.scss
@@ -159,10 +159,10 @@ body.fixed .header-fixed .header-limiter nav {
 .home-main-heading {
     background: #000000;
     color: #ffffff;
-    width: 60%; 
+    width: 60%;
 }
 
-.templates-main-container{
+.templates-main-container {
     height: 87vh;
     display: flex;
     flex-wrap: nowrap;
@@ -172,12 +172,12 @@ body.fixed .header-fixed .header-limiter nav {
     align-items: center;
 }
 
-.templates-theme-lg{
+.templates-theme-lg {
     width: 100%;
     height: 71vh;
 }
 
-.templates-theme-temp{
+.templates-theme-temp {
     display: flex;
     justify-content: space-evenly;
     flex-wrap: nowrap;
@@ -189,7 +189,7 @@ body.fixed .header-fixed .header-limiter nav {
     overflow: auto;
 }
 
-.templates-cv-img{
+.templates-cv-img {
     margin: 5%;
     width: 23%;
     margin: 1% 0 0 0;
@@ -197,15 +197,15 @@ body.fixed .header-fixed .header-limiter nav {
     cursor: pointer;
 }
 
-.templates-cv-sm{
+.templates-cv-sm {
     width: 100px;
-    height:100px;
+    height: 100px;
     margin: 13px;
     border: 1px solid orangered;
     cursor: pointer;
 }
 
-.templates-theme-review{
+.templates-theme-review {
     position: absolute;
     top: -3px;
     margin: 2%;
@@ -216,13 +216,13 @@ body.fixed .header-fixed .header-limiter nav {
     width: 700px;
 }
 
-.templates-cv-img-review{
+.templates-cv-img-review {
     margin: 1%;
     width: 600px;
     height: 900px;
 }
 
-.cross-icon{
+.cross-icon {
     color: red;
     text-align: end;
     margin: 0 5px;
@@ -230,54 +230,151 @@ body.fixed .header-fixed .header-limiter nav {
 }
 
 
-.style-3::-webkit-scrollbar-track
-{
-	-webkit-box-shadow: inset 0 0 6px rgb(240, 233, 233);
-	background-color: #ffffff;
+.style-3::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgb(240, 233, 233);
+    background-color: #ffffff;
 }
 
-.style-3::-webkit-scrollbar
-{
-	width: 6px;
+.style-3::-webkit-scrollbar {
+    width: 6px;
     height: 6px;
-	background-color: #F5F5F5;
+    background-color: #F5F5F5;
 }
 
-.style-3::-webkit-scrollbar-thumb
-{
-	background-color: #ff8000;
+.style-3::-webkit-scrollbar-thumb {
+    background-color: #ff8000;
 }
 
-.blue-color{
+.blue-color {
     color: #5383d3;
 }
-.blue-bg-color{
+
+.blue-bg-color {
     background: #2e5ec9;
 }
-.next-btn{
+
+.next-btn {
     position: absolute;
     bottom: 24%;
     right: 1%;
 }
-.form-container{
+
+.form-container {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    margin: 1%;
 
 
 
-.form-box1{
-    width: 70%;
-    height: 89vh;
-    background: #ff8000;
-}
+    .form-box1 {
+        width: 900px;
+        display: flex;
+        justify-content: center;
+        flex-direction: row;
+        flex-wrap: wrap;
+        padding: 1%;
+        background: #dcdbe4;
+        overflow: auto;
 
-.form-box2{
-    width: 30%;
-    height: 89vh;
-    padding: 2%;
+        .cv-container {
+            width: 90%;
+            height: 82vh;
+            overflow: auto;
+            border: 2px solid blue;
+            background: white;
 
-    label{
-        color: white;
+
+            .cv-header {
+                background: #9d4909;
+                display: flex;
+                justify-content: space-around;
+                flex-wrap: wrap;
+                align-content: center;
+                align-items: center;
+                height: 150px;
+            }
+
+            .left-row {
+                text-align: start;
+                color: white;
+
+                h2 {
+                    margin: 0;
+                    font-family: serif;
+                }
+
+                p {
+                    margin: 0;
+                    font-family: inherit;
+                }
+            }
+
+            .right-row {
+                text-align: start;
+                color: white;
+
+                span {
+                    font-weight: 700;
+                    font-size: 18px;
+                }
+
+                p {
+                    margin: 0;
+                }
+            }
+
+        }
+
+        .cv-body {
+            h3 {
+                text-align: start;
+                margin: 4% 0px -1.8% 1%;
+                color: #9d4909;
+                font-weight: 900;
+                font-family: sans-serif;
+            }
+
+            p {
+                text-align: start;
+                margin: 0 0 0 2%;
+            }
+
+            ul {
+                display: flex;
+                flex-wrap: wrap;
+                flex-direction: column;
+                align-items: flex-start;
+                height: 120px;
+                text-align: start;
+            }
+
+            .edu-h {
+                font-weight: 900;
+                font-size: 20px;
+            }
+
+            .edu-field {
+                font-weight: 600;
+                font-size: 18px;
+                font-family: inherit;
+            }
+        }
+
+
     }
-}
+
+    .form-box2 {
+        width: 30%;
+        height: 89vh;
+        padding: 2%;
+        height: 85vh;
+        overflow: auto;
+
+        label {
+            color: white;
+        }
+    }
 }
